# first_rust_project

./: Cargo.toml  readme.md
basic_data/: Cargo.toml
basic_data/src/: main.rs
conditional_branch/: Cargo.toml
conditional_branch/src/: main.rs
custome_type/: Cargo.toml
custome_type/src/: main.rs
function/src/: main.rs
hello_container/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.build  readme.md
hello_container/src/: lib.rs
hello_world/src/: main.rs
types/src/: main.rs
