workspace = { members = [ "basic_data", "conditional_branch", "custome_type", "hello_container","hello_world", "types"] }
[package]
name = "first_rust_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
